Final commit with last bug fixes for user interface and prep scripts

--- a/terracotta/client/templates/app.html
+++ b/terracotta/client/templates/app.html
@@ -4,11 +4,26 @@
     <title>Glacies Indicium</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto" />
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/leaflet.css') }}" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
-    <link href="{{ url_for('static', filename='css/all.min.css') }}" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto"
+    />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/leaflet.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/main.css') }}"
+    />
+    <link
+      href="{{ url_for('static', filename='css/all.min.css') }}"
+      rel="stylesheet"
+    />
     <link
       href="{{ url_for('static', filename='css/halfmoon-variables.min.css') }}"
       rel="stylesheet"
@@ -78,7 +93,7 @@
         <a href="#" class="navbar-brand">
           <img
             src="{{ url_for('static', filename='images/header_large.png') }}"
-            style="height: 50px"
+            style="height: 50px;"
             id="header-one"
             class="header"
           />
@@ -133,7 +148,9 @@
             </h2>
           </div>
           <div id="details__content">
-            <p class="clear" id="info-text">Glacies Indicium capstone project!</p>
+            <p class="clear" id="info-text">
+              Glacies Indicium capstone project!
+            </p>
             <p id="details__host--title">
               <b>host: </b> <span id="details__host--url">{{ hostname }}</span>
             </p>
@@ -188,7 +205,11 @@
               <h2 class="content-title">Region Keys</h2>
               <div class="input-group" id="search-group">
                 <span>
-                  <i class="fas fa-search" id="search-icon" aria-hidden="true"></i>
+                  <i
+                    class="fas fa-search"
+                    id="search-icon"
+                    aria-hidden="true"
+                  ></i>
                 </span>
                 <input
                   id="search-input"
@@ -199,7 +220,10 @@
                 />
               </div>
               <div id="thumbnail-holder"></div>
-              <div class="scrolling-list overflow-y-auto mt-10" id="search-results"></div>
+              <div
+                class="scrolling-list overflow-y-auto mt-10"
+                id="search-results"
+              ></div>
             </div>
             <div id="loader__container">
               <div id="loader__spinner--control" class="loader__spinner"></div>
